[gd_scene load_steps=9 format=3 uid="uid://bf35pwav6mtg2"]

[ext_resource type="Script" path="res://menus/splash_screen.gd" id="1_tws25"]
[ext_resource type="Texture2D" uid="uid://cjxsahcy7hhje" path="res://resources/images/branding/GWJ-Full-Logo-tag-4k.png" id="2_dimu4"]
[ext_resource type="Texture2D" uid="uid://c34ma0o165jet" path="res://resources/images/branding/60-Malfunction.png" id="3_fdjvg"]
[ext_resource type="Texture2D" uid="uid://bpnw27oi6tcn4" path="res://resources/images/branding/hoop.png" id="4_ry7th"]

[sub_resource type="Animation" id="Animation_huqhr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Theme:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(421, -140)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Theme:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_5iqh3"]
resource_name = "intro"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Theme:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(421, -140), Vector2(421, 40)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Theme:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}

[sub_resource type="Animation" id="Animation_mv3wm"]
resource_name = "intro_2"
length = 2.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Theme:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1, 1.5, 1.6, 1.7, 1.8, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(421, 40), Vector2(421, 60), Vector2(529, 86), Vector2(629, 106), Vector2(686, 125), Vector2(717, 140), Vector2(772, 189), Vector2(840, 375)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Theme:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 1, 1.5, 1.6, 1.7, 1.8, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.232808, 0.232808, 0.334226, 0.381652, 0.54806, 1.18641, 1.24027]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qdofx"]
_data = {
"RESET": SubResource("Animation_huqhr"),
"intro": SubResource("Animation_5iqh3"),
"intro_2": SubResource("Animation_mv3wm")
}

[node name="SplashScreen" type="Node2D"]
script = ExtResource("1_tws25")

[node name="Polygon2D" type="Polygon2D" parent="."]
z_index = -5
color = Color(0.192157, 0.227451, 0.317647, 1)
polygon = PackedVector2Array(0, 0, 1152, 0, 1152, 768, 0, 768)

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(576, 384)
scale = Vector2(0.23, 0.23)
texture = ExtResource("2_dimu4")

[node name="Theme" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(421, -140)
scale = Vector2(0.16, 0.16)
texture = ExtResource("3_fdjvg")
offset = Vector2(968.75, 375)

[node name="Sprite2D" type="Sprite2D" parent="Theme"]
z_index = -1
position = Vector2(0, -18.75)
texture = ExtResource("4_ry7th")

[node name="HoopMarker1" type="Marker2D" parent="Theme/Sprite2D"]
unique_name_in_owner = true
scale = Vector2(6.25, 6.25)

[node name="Sprite2D2" type="Sprite2D" parent="Theme"]
z_index = -1
position = Vector2(1918.75, -18.75)
texture = ExtResource("4_ry7th")

[node name="HoopMarker2" type="Marker2D" parent="Theme/Sprite2D2"]
unique_name_in_owner = true
scale = Vector2(6.25, 6.25)

[node name="Timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qdofx")
}

[node name="BaseMarker1" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(421, -143)

[node name="BaseMarker2" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(728, -143)

[node name="Line1" type="Line2D" parent="."]
unique_name_in_owner = true
z_index = -2
points = PackedVector2Array(0, 0, 0, 0)
width = 3.0
default_color = Color(0.843137, 0.74902, 0.705882, 1)

[node name="Line2" type="Line2D" parent="."]
unique_name_in_owner = true
z_index = -2
points = PackedVector2Array(0, 0, 0, 0)
width = 3.0
default_color = Color(0.843137, 0.74902, 0.705882, 1)

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
